fix qr check and xml check